# ai-pdf-ocr

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  create_test_pdf.py  data_structures.py  main.py  ocr_processor.py  pdf_processor.py  pyproject.toml  simple_memory_monitor.py  text_block_sorter.py
