[tool.poetry]
name = "ai-pdf-ocr"
version = "0.1.0"
description = "PDF OCR & Text Overlay Tool using yomitoku AI-OCR"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
yomitoku = "^0.9.1"
pymupdf = "^1.26.0"
torch = {version = "^2.0.0", optional = true}
torchvision = {version = "^0.20.0", optional = true}
torchaudio = {version = "^2.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
flake8 = "^7.0.0"
isort = "^5.13.0"
pep8-naming = "^0.14.0"
pre-commit = "^3.6.0"

[tool.poetry.extras]
cpu = ["torch", "torchvision", "torchaudio"]
cuda = ["torch", "torchvision", "torchaudio"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded by ^/ will apply only to files and directories
# in the root of the project.
^/setup.py
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
